# artifactx

./: .gitignore  AI_RULES.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITORS.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  KANBAN.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  flake.nix
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: import-migration.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  import-migration.yml
.github/workflows/: ci.yml  crates.yml  docs.yml  oidc-e2e.yml  pages.yml  release.yml
crates/arx/: Cargo.toml  README.md  build.rs
crates/arx-debrepo/: Cargo.toml  README.md
crates/arx-debrepo/src/: deb.rs  lib.rs  manifest.rs
crates/arx-debrepo/tests/: build_apt.rs
crates/arx-pack/: Cargo.toml  README.md
crates/arx-pack/src/: apk.rs  arch.rs  backend.rs  deb.rs  lib.rs  manifest.rs  rpm.rs
crates/arx-pack/tests/: build.rs  real_tools.rs
crates/arx/src/: cache.rs  cli.rs  compose.rs  config.rs  cutover.rs  export.rs  hooks.rs  import.rs  main.rs  mirror.rs  observability.rs  oidc.rs  openapi.yaml  pool.rs  scope.rs  server.rs  signing.rs
crates/arx/src/createrepo_rs/: mod.rs
crates/arx/src/createrepo_rs/pool/: mod.rs
crates/arx/src/createrepo_rs/rpm/: mod.rs
crates/arx/src/createrepo_rs/types/: mod.rs
crates/arx/src/createrepo_rs/walk/: mod.rs
crates/arx/src/createrepo_rs/xml/: parse.rs
crates/arx/src/createrepo_rs/xml/dump/: filelists.rs  other.rs  primary.rs  repomd.rs
crates/arx/src/yum/: mod.rs
crates/arx/tests/: full_cli_regression.rs  path_scope.rs  rm_gc.rs  yum_publish.rs
crates/arx/tests/common/: mod.rs
crates/debrepo/: Cargo.toml  README.md
crates/debrepo/src/: deb.rs  lib.rs  manifest.rs  statedir.rs
crates/debrepo/tests/: build_apt.rs
crates/pack/: Cargo.toml  README.md
crates/pack/src/: apk.rs  backend.rs  deb.rs  lib.rs  manifest.rs  rpm.rs
crates/pack/tests/: build.rs  real_tools.rs
docs/: DESIGN.md  DOCS_PLAN.md  OPERATIONS.md  README.md
docs/adr/: 0001-workspace-and-licensing.md  0002-in-house-apt-generator.md  0003-v4-rsa-signing.md  0004-atomic-publish-by-hash.md  0005-pack-manifest-native.md  0006-http-api-and-push.md  0007-retention-and-gc.md  0008-atomic-rollback.md  0009-dogfood-self-publish.md  0010-cargo-toml-driven-packaging.md  0011-repo-product-readiness.md  0012-pack-product-readiness.md  0013-incremental-publish.md  0014-oidc-keyless-push.md  0015-object-storage-backend-deferred.md  0016-component-channel-filtering.md  0017-mirror-one-way-sync.md  0018-directory-entries-for-package-manifests.md  0019-directory-inputs-for-add-and-import.md  0020-packaged-systemd-service-unit.md  0021-search-and-api-readiness.md  0022-apt-release-identity-preservation.md  0023-cutover-preflight-and-downstream-boundaries.md  0024-public-roadmap-and-information-hygiene.md  0025-lifecycle-hooks.md  0026-preflighted-cutover.md  0027-ci-and-verification-boundaries.md  0028-release-tag-publication-boundary.md  README.md
docs/explanation/: curated-packaging-feed.md  signing-and-expiry.md
docs/how-to/: install-clients.md  integrate-downstream-sync.md  prune-and-gc.md  publish-with-github-pages.md  push-from-ci.md  run-as-systemd-service.md  run-local-e2e.md  run-with-docker-compose.md  secure-serve-behind-proxy.md  use-custom-signing-keys.md
docs/reference/: cli.md  config.md  http-api.md  openapi.yaml  pack.md
docs/tutorials/: create-and-serve-repo.md  import-existing-repo.md
packaging/: arx.service  arx.toml
scripts/: build-pages-site.sh  e2e-legacy-export.sh  sync-version.py
site/: README.md  index.html  install.sh.in  robots.txt.in  sitemap.xml.in
