[workspace]
resolver = "2"
members = ["crates/arx-debrepo", "crates/arx", "crates/arx-pack"]

[workspace.package]
edition = "2021"
authors = ["jamesarch"]

[workspace.dependencies]
anyhow = "1"
walkdir = "2"
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
