[package]
name = "arx-debrepo"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
description = "Lightweight pure-Rust Debian/apt repository generator: parse .deb packages and emit Packages/Release indices. Signing-agnostic."
license = "MIT OR Apache-2.0"
repository = "https://github.com/artifactx-rs/artifactx"
keywords = ["debian", "apt", "repository", "deb", "packages"]
categories = ["development-tools::build-utils"]

[dependencies]
anyhow.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
sha1 = "0.10"
md-5 = "0.10"
ar = "0.9"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
ar = "0.9"
tar = "0.4"
flate2 = "1"
