[package]
name = "arx-debrepo"
version = "0.3.2"
edition.workspace = true
authors.workspace = true
description = "Lightweight pure-Rust Debian/apt repository generator: parse .deb packages and emit Packages/Release indices. Signing-agnostic."
license = "MIT OR Apache-2.0"
repository = "https://github.com/artifactx-rs/artifactx"
keywords = ["debian", "apt", "repository", "deb", "packages"]
categories = ["development-tools::build-utils"]

[dependencies]
anyhow.workspace = true
ar.workspace = true
chrono.workspace = true
flate2.workspace = true
hex.workspace = true
md-5.workspace = true
serde.workspace = true
sha2.workspace = true
tar.workspace = true
toml.workspace = true
walkdir.workspace = true
xz2.workspace = true
sha1 = "0.10"
zstd.workspace = true

[dev-dependencies]
ar.workspace = true
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
