[package]
name = "arx-pack"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
description = "Pure-Rust packager: build .deb, .rpm, .apk, and Arch .pkg.tar.zst from a single TOML manifest, no native toolchain required for the common case."
license = "MIT OR Apache-2.0"
repository = "https://github.com/artifactx-rs/artifactx"
keywords = ["packaging", "deb", "rpm", "apk", "arch"]
categories = ["development-tools::build-utils"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true

# Native .deb assembly: ar archive + gzip-compressed tarballs.
ar.workspace = true
tar.workspace = true
flate2.workspace = true
md-5.workspace = true
sha2.workspace = true
zstd.workspace = true

# Native .rpm assembly: the same crate createrepo_rs uses.
rpm = { version = "0.25.1", default-features = false, features = ["payload", "gzip-compression"] }

# Deterministic staging directory.
tempfile.workspace = true

[dev-dependencies]
# Tests re-parse the .deb inline (ar + tar + flate2) instead of depending on the
# sibling `arx-debrepo` crate, so this crate stays standalone.
ar.workspace = true
tar.workspace = true
flate2.workspace = true
