[package]
name = "artifactx"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "ArtifactX (arx) — cross-platform package repository manager. One-binary apt + yum repo generator with PGP signing and built-in HTTP serving."
license = "GPL-2.0-or-later"
repository = "https://github.com/jamesarch/artifactx"

[[bin]]
name = "arx"
path = "src/main.rs"

[dependencies]
# apt repo generation + packaging (in-house, permissively licensed sibling crates)
debrepo = { path = "../debrepo" }
pack = { path = "../pack" }

# yum: reuse our own createrepo_rs library
createrepo_rs = "0.1.9"

# async runtime + HTTP service
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# HTTP client for `arx push`
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

# CLI / general
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true

# PGP signing (rpgp, pure Rust)
pgp = "0.14"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
ar = "0.9"
tar = "0.4"
flate2 = "1"

[build-dependencies]
# Build-time version stamping (git sha, build time, rustc) via pure-Rust gix.
# Pin vergen to 9.0.x: vergen-gix 1.0.x expects vergen-lib 0.1.6, but vergen
# 9.1.0 switched to an incompatible vergen-lib, breaking add_instructions().
vergen = ">=9.0.5, <9.1.0"
vergen-gix = { version = "1", features = ["build", "cargo", "rustc"] }
