[package]
name = "artifactx"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
description = "ArtifactX (arx) — cross-platform package repository manager. One-binary apt + yum repo generator with PGP signing and built-in HTTP serving."
license = "GPL-2.0-or-later"
repository = "https://github.com/artifactx-rs/artifactx"
readme = "README.md"
keywords = ["apt", "yum", "repository", "deb", "rpm"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "arx"
path = "src/main.rs"

[dependencies]
# apt repo generation + packaging (in-house, permissively licensed sibling crates)
arx-debrepo = { version = "0.3.1", path = "../arx-debrepo" }
arx-pack = { version = "0.3.1", path = "../arx-pack" }

# yum repository metadata generation (local createrepo_rs subset)
bzip2 = "0.4"
crossbeam-channel = "0.5"
flate2.workspace = true
glob = "0.3"
num_cpus = "1"
quick-xml = "0.37"
rpm = { version = "0.25.1", default-features = false }
thiserror = "1"
zstd.workspace = true

# Tested version comparators for retention/GC ordering (data-loss-sensitive —
# dpkg/rpm semantics, not hand-rolled; see ADR-0011). License-compatible.
debversion = "0.5"
rpm-version = "0.5"

# async runtime + HTTP service
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# HTTP client for `arx push`
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }

# OIDC JWT validation + GitHub JWKS
jsonwebtoken = "10"
serde_json = "1"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

# CLI / general
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
xz2.workspace = true

# PGP signing (rpgp, pure Rust)
pgp = "0.14"
rand = "0.8"
rayon = "1.12.0"
blake3 = "1.8.5"

[dev-dependencies]
ar.workspace = true
tar.workspace = true
tempfile.workspace = true

# Cargo.toml-driven packaging (ADR-0010 / ADR-0012 §3 dogfood). [[bin]].name
# = "arx" overrides the package name, and target-dir walks up to the workspace
# root — so `arx pack` from this directory just works after `cargo build`.
# The release workflow still uses packaging/arx.toml for its custom build/ dir.
[package.metadata.arx]
section = "utils"
depends = ["libc6"]
maintainer = "jamesarch <han.shan@live.cn>"
